--- a/code-postprocessing/cocopp/latex_commands_for_html.html
+++ b/code-postprocessing/cocopp/latex_commands_for_html.html
@@ -29,15 +29,15 @@
 
 ##bbobECDFslegendrlbased##
 
-Bootstrapped empirical cumulative distribution of the number of objective function evaluations divided by dimension (FEvals/DIM) for all functions and subgroups in DIMVALUE-D. The targets are chosen from BBOBPPFIGSTARGETRANGE such that the REFERENCEALGORITHM artificial algorithm just not reached them within a given budget of k &times; DIM, with k &#8712; {0.5, 1.2, 3, 10, 50}. The "best 2009" line corresponds to the best <span class="roman">aRT</span>&nbsp;observed during BBOB 2009 for each selected target.
+Bootstrapped empirical cumulative distribution of the number of objective function evaluations divided by dimension (FEvals/DIM) for all functions and subgroups in DIMVALUE-D. The targets are chosen from 10<sup>[&#8722;8..2]</sup> such that the best algorithm from BBOB 2009 just not reached them within a given budget of k &times; DIM, with k &#8712; {0.5, 1.2, 3, 10, 50}. The "best 2009" line corresponds to the best <span class="roman">aRT</span>&nbsp;observed during BBOB 2009 for each selected target.
 
 <div class="p"><!----></div>
 ##bbobppfigslegendrlbased##
 
 Average running time (<span class="roman">aRT</span>&nbsp;in number of f-evaluations
                         as log<sub>10</sub> value) divided by dimension versus dimension. The target function value
-                        is chosen such that the REFERENCEALGORITHM artificial algorithm just failed to achieve
-                        an <span class="roman">aRT</span>&nbsp;of BBOBPPFIGSFTARGET&times;<span class="roman">DIM</span>. Different symbols correspond to different algorithms given in the legend of f<sub>1</sub> and f<sub>24</sub>. Light symbols give the maximum number of function evaluations from the longest trial divided by dimension. Black stars indicate a statistically better result compared to all other algorithms with p &lt; 0.01 and Bonferroni correction number of dimensions (six).  
+                        is chosen such that !!THE-REF-ALG!! just failed to achieve
+                        an <span class="roman">aRT</span>&nbsp;of !!PPFIGS<sub>F</sub>TARGET!!&times;<span class="roman">DIM</span>. Different symbols correspond to different algorithms given in the legend of f<sub>1</sub> and f<sub>24</sub>. Light symbols give the maximum number of function evaluations from the longest trial divided by dimension. Black stars indicate a statistically better result compared to all other algorithms with p &lt; 0.01 and Bonferroni correction number of dimensions (six).  
 
 <div class="p"><!----></div>
 ##bbobpprldistrlegendrlbased##
@@ -90,8 +90,8 @@ Average running time (<span class="roman">aRT</span>&nbsp;in number of f-evaluat
         within the given budget k&times;<span class="roman">DIM</span>, where k is shown in the
         legend. Numbers above <span class="roman">aRT</span>-symbols (if appearing) indicate the number
         of trials reaching the respective target. The light thick line with diamonds indicates the best algorithm from BBOB 2009 for the most difficult target.  Slanted
-        grid lines indicate a scaling with <span style="font-family:helvetica"><i>O</i></span>(<span class="roman">DIM</span>) compared to
-        <span style="font-family:helvetica"><i>O</i></span>(1) when using the respective reference algorithm.
+        grid lines indicate a scaling with <i>O</i>(<span class="roman">DIM</span>) compared to
+        <i>O</i>(1) when using the respective reference algorithm.
 
 <div class="p"><!----></div>
 ##bbobpptablecaptionrlbased##
@@ -196,13 +196,13 @@ Average running time (<span class="roman">aRT</span>&nbsp;in log<sub>10</sub> of
 <div class="p"><!----></div>
 ##bbobECDFslegendfixed##
 
-Bootstrapped empirical cumulative distribution of the number of objective function evaluations divided by dimension (FEvals/DIM) for BBOBPPFIGSFTARGET targets with target precision in BBOBPPFIGSTARGETRANGE for all functions and subgroups. The "best 2009" line corresponds to the best <span class="roman">aRT</span>&nbsp;observed during BBOB 2009 for each selected target.
+Bootstrapped empirical cumulative distribution of the number of objective function evaluations divided by dimension (FEvals/DIM) for 51 targets with target precision in 10<sup>[&#8722;8..2]</sup> for all functions and subgroups. The "best 2009" line corresponds to the best <span class="roman">aRT</span>&nbsp;observed during BBOB 2009 for each selected target.
 
 <div class="p"><!----></div>
 ##bbobppfigslegendfixed##
 
 Average running time (<span class="roman">aRT</span>&nbsp;in number of f-evaluations
-                    as log<sub>10</sub> value), divided by dimension for target function value BBOBPPFIGSFTARGET
+                    as log<sub>10</sub> value), divided by dimension for target function value !!PPFIGS<sub>F</sub>TARGET!!
                     versus dimension. Slanted grid lines indicate quadratic scaling with the dimension. Different symbols correspond to different algorithms given in the legend of f<sub>1</sub> and f<sub>24</sub>. Light symbols give the maximum number of function evaluations from the longest trial divided by dimension. Black stars indicate a statistically better result compared to all other algorithms with p &lt; 0.01 and Bonferroni correction number of dimensions (six).  
 
 <div class="p"><!----></div>
@@ -362,13 +362,13 @@ Average running time (<span class="roman">aRT</span>&nbsp;in log<sub>10</sub> of
 <div class="p"><!----></div>
 ##bbobECDFslegendbiobjfixed##
 
-Bootstrapped empirical cumulative distribution of the number of objective function evaluations divided by dimension (FEvals/DIM) for BBOBPPFIGSFTARGET targets with target precision in BBOBPPFIGSTARGETRANGE for all functions and subgroups. The "best 2016" line corresponds to the best <span class="roman">aRT</span>&nbsp;observed during BBOB 2016 for each selected target.
+Bootstrapped empirical cumulative distribution of the number of objective function evaluations divided by dimension (FEvals/DIM) for 58 targets with target precision in {&#8722;10<sup>&#8722;4</sup>, &#8722;10<sup>&#8722;4.2</sup>,  &#8722;10<sup>&#8722;4.4</sup>, &#8722;10<sup>&#8722;4.6</sup>, &#8722;10<sup>&#8722;4.8</sup>, &#8722;10<sup>&#8722;5</sup>, 0, 10<sup>&#8722;5</sup>, 10<sup>&#8722;4.9</sup>, 10<sup>&#8722;4.8</sup>, ..., 10<sup>&#8722;0.1</sup>, 10<sup>0</sup>} for all functions and subgroups. The "best 2016" line corresponds to the best <span class="roman">aRT</span>&nbsp;observed during BBOB 2016 for each selected target.
 
 <div class="p"><!----></div>
 ##bbobppfigslegendbiobjfixed##
 
 Average running time (<span class="roman">aRT</span>&nbsp;in number of f-evaluations
-                    as log<sub>10</sub> value), divided by dimension for target function value BBOBPPFIGSFTARGET
+                    as log<sub>10</sub> value), divided by dimension for target function value !!PPFIGS<sub>F</sub>TARGET!!
                     versus dimension. Slanted grid lines indicate quadratic scaling with the dimension. Different symbols correspond to different algorithms given in the legend of f<sub>1</sub> and f<sub>55</sub>. Light symbols give the maximum number of function evaluations from the longest trial divided by dimension. Black stars indicate a statistically better result compared to all other algorithms with p &lt; 0.01 and Bonferroni correction number of dimensions (six).  
 
 <div class="p"><!----></div>
@@ -524,15 +524,15 @@ Average running time (<span class="roman">aRT</span>&nbsp;in log<sub>10</sub> of
 <div class="p"><!----></div>
 ##bbobECDFslegendbiobjrlbased##
 
-Bootstrapped empirical cumulative distribution of the number of objective function evaluations divided by dimension (FEvals/DIM) for all functions and subgroups in DIMVALUE-D. The targets are chosen from BBOBPPFIGSTARGETRANGE such that the REFERENCEALGORITHM artificial algorithm just not reached them within a given budget of k &times; DIM, with k &#8712; {0.5, 1.2, 3, 10, 50}. The "best 2016" line corresponds to the best <span class="roman">aRT</span>&nbsp;observed during BBOB 2016 for each selected target.
+Bootstrapped empirical cumulative distribution of the number of objective function evaluations divided by dimension (FEvals/DIM) for all functions and subgroups in DIMVALUE-D. The targets are chosen from {&#8722;10<sup>&#8722;4</sup>, &#8722;10<sup>&#8722;4.2</sup>,  &#8722;10<sup>&#8722;4.4</sup>, &#8722;10<sup>&#8722;4.6</sup>, &#8722;10<sup>&#8722;4.8</sup>, &#8722;10<sup>&#8722;5</sup>, 0, 10<sup>&#8722;5</sup>, 10<sup>&#8722;4.9</sup>, 10<sup>&#8722;4.8</sup>, ..., 10<sup>&#8722;0.1</sup>, 10<sup>0</sup>} such that the best algorithm from BBOB 2016 just not reached them within a given budget of k &times; DIM, with k &#8712; {0.5, 1.2, 3, 10, 50}. The "best 2016" line corresponds to the best <span class="roman">aRT</span>&nbsp;observed during BBOB 2016 for each selected target.
 
 <div class="p"><!----></div>
 ##bbobppfigslegendbiobjrlbased##
 
 Average running time (<span class="roman">aRT</span>&nbsp;in number of f-evaluations
                         as log<sub>10</sub> value) divided by dimension versus dimension. The target function value
-                        is chosen such that the REFERENCEALGORITHM artificial algorithm just failed to achieve
-                        an <span class="roman">aRT</span>&nbsp;of BBOBPPFIGSFTARGET&times;<span class="roman">DIM</span>. Different symbols correspond to different algorithms given in the legend of f<sub>1</sub> and f<sub>55</sub>. Light symbols give the maximum number of function evaluations from the longest trial divided by dimension. Black stars indicate a statistically better result compared to all other algorithms with p &lt; 0.01 and Bonferroni correction number of dimensions (six).  
+                        is chosen such that !!THE-REF-ALG!! just failed to achieve
+                        an <span class="roman">aRT</span>&nbsp;of !!PPFIGS<sub>F</sub>TARGET!!&times;<span class="roman">DIM</span>. Different symbols correspond to different algorithms given in the legend of f<sub>1</sub> and f<sub>55</sub>. Light symbols give the maximum number of function evaluations from the longest trial divided by dimension. Black stars indicate a statistically better result compared to all other algorithms with p &lt; 0.01 and Bonferroni correction number of dimensions (six).  
 
 <div class="p"><!----></div>
 ##bbobpprldistrlegendbiobjrlbased##
@@ -586,8 +586,8 @@ Average running time (<span class="roman">aRT</span>&nbsp;in number of f-evaluat
         within the given budget k&times;<span class="roman">DIM</span>, where k is shown in the
         legend. Numbers above <span class="roman">aRT</span>-symbols (if appearing) indicate the number
         of trials reaching the respective target. The light thick line with diamonds indicates the best algorithm from BBOB 2016 for the most difficult target.  Slanted
-        grid lines indicate a scaling with <span style="font-family:helvetica"><i>O</i></span>(<span class="roman">DIM</span>) compared to
-        <span style="font-family:helvetica"><i>O</i></span>(1) when using the respective reference algorithm.
+        grid lines indicate a scaling with <i>O</i>(<span class="roman">DIM</span>) compared to
+        <i>O</i>(1) when using the respective reference algorithm.
 
 <div class="p"><!----></div>
 ##bbobpptablecaptionbiobjrlbased##
@@ -691,13 +691,13 @@ Average running time (<span class="roman">aRT</span>&nbsp;in log<sub>10</sub> of
 <div class="p"><!----></div>
 ##bbobECDFslegendbiobjextfixed##
 
-Bootstrapped empirical cumulative distribution of the number of objective function evaluations divided by dimension (FEvals/DIM) for BBOBPPFIGSFTARGET targets with target precision in BBOBPPFIGSTARGETRANGE for all functions and subgroups. 
+Bootstrapped empirical cumulative distribution of the number of objective function evaluations divided by dimension (FEvals/DIM) for 58 targets with target precision in {&#8722;10<sup>&#8722;4</sup>, &#8722;10<sup>&#8722;4.2</sup>,  &#8722;10<sup>&#8722;4.4</sup>, &#8722;10<sup>&#8722;4.6</sup>, &#8722;10<sup>&#8722;4.8</sup>, &#8722;10<sup>&#8722;5</sup>, 0, 10<sup>&#8722;5</sup>, 10<sup>&#8722;4.9</sup>, 10<sup>&#8722;4.8</sup>, ..., 10<sup>&#8722;0.1</sup>, 10<sup>0</sup>} for all functions and subgroups. 
 
 <div class="p"><!----></div>
 ##bbobppfigslegendbiobjextfixed##
 
 Average running time (<span class="roman">aRT</span>&nbsp;in number of f-evaluations
-                    as log<sub>10</sub> value), divided by dimension for target function value BBOBPPFIGSFTARGET
+                    as log<sub>10</sub> value), divided by dimension for target function value !!PPFIGS<sub>F</sub>TARGET!!
                     versus dimension. Slanted grid lines indicate quadratic scaling with the dimension. Different symbols correspond to different algorithms given in the legend of f<sub>1</sub> and f<sub>92</sub>. Light symbols give the maximum number of function evaluations from the longest trial divided by dimension. Black stars indicate a statistically better result compared to all other algorithms with p &lt; 0.01 and Bonferroni correction number of dimensions (six).  
 
 <div class="p"><!----></div>
@@ -855,5 +855,5 @@ Average running time (<span class="roman">aRT</span>&nbsp;in log<sub>10</sub> of
 T<sub><span class="small">E</span></sub>X
 by <a href="http://hutchinson.belmont.ma.us/tth/">
 T<sub><span class="small">T</span></sub>H</a>,
-version 4.08.<br />On 18 Jan 2017, 01:41.</small>
+version 4.08.<br />On 08 Feb 2017, 11:41.</small>
 </html>
