Updated the generation of the pptable_x_y.tex files.

--- a/code-postprocessing/cocopp/latex_commands_for_html.html
+++ b/code-postprocessing/cocopp/latex_commands_for_html.html
@@ -97,7 +97,7 @@ Average running time (<span class="roman">aRT</span>&nbsp;in number of f-evaluat
 ##bbobpptablecaptionrlbased##
 
         Average running time (<span class="roman">aRT</span>&nbsp;in number of function 
-        evaluations) divided by the best <span class="roman">aRT</span>&nbsp;of the best algorithm from BBOB 2009. The <span class="roman">aRT</span>&nbsp;
+        evaluations) divided by the best <span class="roman">aRT</span>&nbsp;of the best algorithm from BBOB 2009 in different dimensions. The <span class="roman">aRT</span>&nbsp;
         and in braces, as dispersion measure, the half difference between 90 and 
         10%-tile of bootstrapped run lengths appear in the second row of each cell,  
         the best <span class="roman">aRT</span>&nbsp;                in the first. The different target &#8710;f-values are shown in the top row. 
@@ -264,7 +264,7 @@ Average running time (<span class="roman">aRT</span>&nbsp;in number of f-evaluat
 ##bbobpptablecaptionfixed##
 
         Average running time (<span class="roman">aRT</span>&nbsp;in number of function 
-        evaluations) divided by the best <span class="roman">aRT</span>&nbsp;of the best algorithm from BBOB 2009. The <span class="roman">aRT</span>&nbsp;
+        evaluations) divided by the best <span class="roman">aRT</span>&nbsp;of the best algorithm from BBOB 2009 in different dimensions. The <span class="roman">aRT</span>&nbsp;
         and in braces, as dispersion measure, the half difference between 90 and 
         10%-tile of bootstrapped run lengths appear in the second row of each cell,  
         the best <span class="roman">aRT</span>&nbsp;                (preceded by the target &#8710;f-value in <i>italics</i>) in the first. 
@@ -427,7 +427,7 @@ Average running time (<span class="roman">aRT</span>&nbsp;in number of f-evaluat
 ##bbobpptablecaptionbiobjfixed##
 
         Average running time (<span class="roman">aRT</span>&nbsp;in number of function 
-        evaluations) divided by the best <span class="roman">aRT</span>&nbsp;of the best algorithm from BBOB 2016. The <span class="roman">aRT</span>&nbsp;
+        evaluations) divided by the best <span class="roman">aRT</span>&nbsp;of the best algorithm from BBOB 2016 in different dimensions. The <span class="roman">aRT</span>&nbsp;
         and in braces, as dispersion measure, the half difference between 90 and 
         10%-tile of bootstrapped run lengths appear in the second row of each cell,  
         the best <span class="roman">aRT</span>&nbsp;                (preceded by the target &#8710;I-value in <i>italics</i>) in the first. 
@@ -592,7 +592,7 @@ Average running time (<span class="roman">aRT</span>&nbsp;in number of f-evaluat
 ##bbobpptablecaptionbiobjrlbased##
 
         Average running time (<span class="roman">aRT</span>&nbsp;in number of function 
-        evaluations) divided by the best <span class="roman">aRT</span>&nbsp;of the best algorithm from BBOB 2016. The <span class="roman">aRT</span>&nbsp;
+        evaluations) divided by the best <span class="roman">aRT</span>&nbsp;of the best algorithm from BBOB 2016 in different dimensions. The <span class="roman">aRT</span>&nbsp;
         and in braces, as dispersion measure, the half difference between 90 and 
         10%-tile of bootstrapped run lengths appear in the second row of each cell,  
         the best <span class="roman">aRT</span>&nbsp;                in the first. The different target &#8710;I-values are shown in the top row. 
@@ -853,5 +853,5 @@ Average running time (<span class="roman">aRT</span>&nbsp;in log<sub>10</sub> of
 T<sub><span class="small">E</span></sub>X
 by <a href="http://hutchinson.belmont.ma.us/tth/">
 T<sub><span class="small">T</span></sub>H</a>,
-version 4.08.<br />On 22 Feb 2017, 14:07.</small>
+version 4.08.<br />On 22 Feb 2017, 15:05.</small>
 </html>
