corrected captions regarding the triangledown, Diamond, etc. issue (see issue #21) cleaned up some other things

--- a/code-postprocessing/cocopp/latex_commands_for_html.html
+++ b/code-postprocessing/cocopp/latex_commands_for_html.html
@@ -695,7 +695,7 @@ Average running time (<span class="roman">aRT</span>&nbsp;in number of f-evaluat
         in number of function evaluations, in different dimensions. For each function, the <span class="roman">aRT</span>&nbsp;
         and, in braces as dispersion measure, the half difference between 10 and 
         90%-tile of (bootstrapped) runtimes is shown for the different
-        target !!DI!!-values as shown in the top row. 
+        target &#8710;I-values as shown in the top row. 
         #succ is the number of trials that reached the last target
         I<sup><span class="roman">ref</span></sup>+ 10<sup>&#8722;5</sup>.
                 The median number of conducted function evaluations is additionally given in 
@@ -833,7 +833,7 @@ Average running time (<span class="roman">aRT</span>&nbsp;in number of f-evaluat
         in number of function evaluations, in different dimensions. For each function, the <span class="roman">aRT</span>&nbsp;
         and, in braces as dispersion measure, the half difference between 10 and 
         90%-tile of (bootstrapped) runtimes is shown for the different
-        target !!DI!!-values as shown in the top row. 
+        target &#8710;f-values as shown in the top row. 
         #succ is the number of trials that reached the last target
         f<sub><span class="roman">opt</span></sub>+ 10<sup>&#8722;6</sup>.
                 The median number of conducted function evaluations is additionally given in 
@@ -892,5 +892,5 @@ Average running time (<span class="roman">aRT</span>&nbsp;in log<sub>10</sub> of
 T<sub><span class="small">E</span></sub>X
 by <a href="http://hutchinson.belmont.ma.us/tth/">
 T<sub><span class="small">T</span></sub>H</a>,
-version 4.08.<br />On 24 Aug 2017, 16:35.</small>
+version 4.08.<br />On 25 Aug 2017, 15:55.</small>
 </html>
