updated html captions to make tests stable again

--- a/code-postprocessing/cocopp/latex_commands_for_html.html
+++ b/code-postprocessing/cocopp/latex_commands_for_html.html
@@ -804,7 +804,7 @@ Average running time (<span class="roman">aRT</span>&nbsp;in number of f-evaluat
         Cross (+): median runtime of successful runs to reach the most difficult
         target that was reached at least once (but not always);
         Cross (<span style="color:#FF0000">&times;</span>): maximum number of
-        (f+g)-evaluations in any trial. Notched boxes: interquartile range with median of simulated runs; 
+        f-evaluations in any trial. Notched boxes: interquartile range with median of simulated runs; 
         All values are divided by dimension and  
         plotted as log<sub>10</sub> values versus dimension.                 Shown is the <span class="roman">aRT</span>&nbsp;for fixed values of &#8710;f
 = 10<sup>k</sup> with k given
@@ -892,5 +892,5 @@ Average running time (<span class="roman">aRT</span>&nbsp;in log<sub>10</sub> of
 T<sub><span class="small">E</span></sub>X
 by <a href="http://hutchinson.belmont.ma.us/tth/">
 T<sub><span class="small">T</span></sub>H</a>,
-version 4.08.<br />On 27 Aug 2017, 09:50.</small>
+version 4.08.<br />On 24 Nov 2017, 10:23.</small>
 </html>
