--- a/code-postprocessing/cocopp/latex_commands_for_html.html
+++ b/code-postprocessing/cocopp/latex_commands_for_html.html
@@ -122,7 +122,7 @@ Average running time (<span class="roman">aRT</span>&nbsp;in number of f-evaluat
                 run-length based target, the corresponding reference <span class="roman">aRT</span>&nbsp;        (preceded by the target &#8710;f-value in <i>italics</i>) in the first row. 
         #succ is the number of trials that reached the target value of the last column.
                 The median number of conducted function evaluations is additionally given in 
-        <i>italics</i>, if the target in the last column was never reached. 
+        <i>italics</i>, if the target in the last column was never reached.
         Entries, succeeded by a star, are statistically significantly better (according to
         the rank-sum test) when compared to all other algorithms of the table, with
         p = 0.05 or p = 10<sup>&#8722;k</sup> when the number k following the star is larger
@@ -217,7 +217,7 @@ Average running time (<span class="roman">aRT</span>&nbsp;in number of f-evaluat
         &#8710;f
 =10<sup>&#8722;8</sup> of all algorithms benchmarked during
         BBOB-2009. Right sub-columns:
-        ECDF of FEval ratios of algorithmA&nbsp;divided by algorithmB for target
+        ECDF of FEval ratios of algorithmA&nbsp;divided by algorithmB&nbsp;for target
         function values 10<sup>k</sup> with k given in the legend; all
         trial pairs for each function. Pairs where both trials failed are disregarded,
         pairs where one trial failed are visible in the limits being  &gt; 0 or  &lt; 1. The
@@ -270,7 +270,7 @@ Average running time (<span class="roman">aRT</span>&nbsp;in number of f-evaluat
         #succ is the number of trials that reached the (final) target
         f<sub><span class="roman">opt</span></sub>+ 10<sup>&#8722;8</sup>.
                 The median number of conducted function evaluations is additionally given in 
-        <i>italics</i>, if the target in the last column was never reached. 
+        <i>italics</i>, if the target in the last column was never reached.
         Entries, succeeded by a star, are statistically significantly better (according to
         the rank-sum test) when compared to all other algorithms of the table, with
         p = 0.05 or p = 10<sup>&#8722;k</sup> when the number k following the star is larger
@@ -360,7 +360,7 @@ Average running time (<span class="roman">aRT</span>&nbsp;in number of f-evaluat
 =10<sup>k</sup>, where
         k is given by the first value in the legend, for
         algorithmA&nbsp;(<span style="color:#000000">&#176;</span>) and algorithmB&nbsp;(<span style="color:#000000">&#9830;</span>)        . Right sub-columns:
-        ECDF of FEval ratios of algorithmA&nbsp;divided by algorithmB for target
+        ECDF of FEval ratios of algorithmA&nbsp;divided by algorithmB&nbsp;for target
         function values 10<sup>k</sup> with k given in the legend; all
         trial pairs for each function. Pairs where both trials failed are disregarded,
         pairs where one trial failed are visible in the limits being  &gt; 0 or  &lt; 1. The
@@ -413,7 +413,7 @@ Average running time (<span class="roman">aRT</span>&nbsp;in number of f-evaluat
         #succ is the number of trials that reached the (final) target
         I<sup><span class="roman">ref</span></sup>+ 10<sup>&#8722;5</sup>.
                 The median number of conducted function evaluations is additionally given in 
-        <i>italics</i>, if the target in the last column was never reached. 
+        <i>italics</i>, if the target in the last column was never reached.
         Entries, succeeded by a star, are statistically significantly better (according to
         the rank-sum test) when compared to all other algorithms of the table, with
         p = 0.05 or p = 10<sup>&#8722;k</sup> when the number k following the star is larger
@@ -558,7 +558,7 @@ Average running time (<span class="roman">aRT</span>&nbsp;in number of f-evaluat
                 run-length based target, the corresponding reference <span class="roman">aRT</span>&nbsp;        (preceded by the target &#8710;I-value in <i>italics</i>) in the first row. 
         #succ is the number of trials that reached the target value of the last column.
                 The median number of conducted function evaluations is additionally given in 
-        <i>italics</i>, if the target in the last column was never reached. 
+        <i>italics</i>, if the target in the last column was never reached.
         Entries, succeeded by a star, are statistically significantly better (according to
         the rank-sum test) when compared to all other algorithms of the table, with
         p = 0.05 or p = 10<sup>&#8722;k</sup> when the number k following the star is larger
@@ -651,7 +651,7 @@ Average running time (<span class="roman">aRT</span>&nbsp;in number of f-evaluat
 =10<sup>k</sup>, where
         k is given by the first value in the legend, for
         algorithmA&nbsp;(<span style="color:#000000">&#176;</span>) and algorithmB&nbsp;(<span style="color:#000000">&#9830;</span>)        . Right sub-columns:
-        ECDF of FEval ratios of algorithmA&nbsp;divided by algorithmB for target
+        ECDF of FEval ratios of algorithmA&nbsp;divided by algorithmB&nbsp;for target
         function values 10<sup>k</sup> with k given in the legend; all
         trial pairs for each function. Pairs where both trials failed are disregarded,
         pairs where one trial failed are visible in the limits being  &gt; 0 or  &lt; 1. The
@@ -699,7 +699,7 @@ Average running time (<span class="roman">aRT</span>&nbsp;in number of f-evaluat
         #succ is the number of trials that reached the last target
         I<sup><span class="roman">ref</span></sup>+ 10<sup>&#8722;5</sup>.
                 The median number of conducted function evaluations is additionally given in 
-        <i>italics</i>, if the target in the last column was never reached. 
+        <i>italics</i>, if the target in the last column was never reached.
         Entries, succeeded by a star, are statistically significantly better (according to
         the rank-sum test) when compared to all other algorithms of the table, with
         p = 0.05 or p = 10<sup>&#8722;k</sup> when the number k following the star is larger
@@ -789,7 +789,7 @@ Average running time (<span class="roman">aRT</span>&nbsp;in number of f-evaluat
 =10<sup>k</sup>, where
         k is given by the first value in the legend, for
         algorithmA&nbsp;(<span style="color:#000000">&#176;</span>) and algorithmB&nbsp;(<span style="color:#000000">&#9830;</span>)        . Right sub-columns:
-        ECDF of FEval ratios of algorithmA&nbsp;divided by algorithmB for target
+        ECDF of FEval ratios of algorithmA&nbsp;divided by algorithmB&nbsp;for target
         function values 10<sup>k</sup> with k given in the legend; all
         trial pairs for each function. Pairs where both trials failed are disregarded,
         pairs where one trial failed are visible in the limits being  &gt; 0 or  &lt; 1. The
@@ -837,7 +837,7 @@ Average running time (<span class="roman">aRT</span>&nbsp;in number of f-evaluat
         #succ is the number of trials that reached the last target
         f<sub><span class="roman">opt</span></sub>+ 10<sup>&#8722;6</sup>.
                 The median number of conducted function evaluations is additionally given in 
-        <i>italics</i>, if the target in the last column was never reached. 
+        <i>italics</i>, if the target in the last column was never reached.
         Entries, succeeded by a star, are statistically significantly better (according to
         the rank-sum test) when compared to all other algorithms of the table, with
         p = 0.05 or p = 10<sup>&#8722;k</sup> when the number k following the star is larger
@@ -886,11 +886,146 @@ Average running time (<span class="roman">aRT</span>&nbsp;in log<sub>10</sub> of
         is the geometric mean.
 
 <div class="p"><!----></div>
+##bbobECDFslegendlargescalefixed##
+
+Bootstrapped empirical cumulative distribution of the number of objective function evaluations divided by dimension (FEvals/DIM) for !!NUM&#8722;OF&#8722;TARGETS&#8722;IN&#8722;ECDF!! targets with target precision in !!TARGET-RANGES-IN-ECDF!! for all functions and subgroups in -D. 
+
+<div class="p"><!----></div>
+##bbobppfigslegendlargescalefixed##
+
+Average running time (<span class="roman">aRT</span>&nbsp;in number of f-evaluations
+                    as log<sub>10</sub> value), divided by dimension for target function value !!PPFIGS&#8722;FTARGET!!
+                    versus dimension. Slanted grid lines indicate quadratic scaling with the dimension. Different symbols correspond to different algorithms given in the legend of f<sub>1</sub> and f<sub>24</sub>. Light symbols give the maximum number of function evaluations from the longest trial divided by dimension. Black stars indicate a statistically better result compared to all other algorithms with p &lt; 0.01 and Bonferroni correction number of dimensions (six).  
+
+<div class="p"><!----></div>
+##bbobpprldistrlegendlargescalefixed##
+
+         Empirical cumulative distribution functions (ECDF), plotting the fraction of
+         trials with an outcome not larger than the respective value on the x-axis.
+                  Left subplots: ECDF of the number of function evaluations (FEvals) divided by search space dimension D,
+         to fall below f<sub><span class="roman">opt</span></sub>+&#8710;f with &#8710;f
+=10<sup>k</sup>, where k is the first value in the legend.
+         The thick red line represents the most difficult target value f<sub><span class="roman">opt</span></sub>+ 10<sup>&#8722;8</sup>.          Legends indicate for each target the number of functions that were solved in at
+         least one trial within the displayed budget.
+         Right subplots: ECDF of the best achieved &#8710;f
+         for running times of 0.5D, 1.2D, 3D, 10D, 100D, 1000D,...
+         function evaluations
+         (from right to left cycling cyan-magenta-black...) and final &#8710;f-value (red),
+         where &#8710;fand <span style="font-family:helvetica">Df</span> denote the difference to the optimal function value. 
+
+<div class="p"><!----></div>
+##bbobpprldistrlegendtwolargescalefixed##
+
+        Empirical cumulative distributions (ECDF)
+        of run lengths and speed-up ratios in 80-D (left) and 320-D (right).
+        Left sub-columns: ECDF of
+        the number of function evaluations divided by dimension D
+        (FEvals/D)         to reach a target value f<sub><span class="roman">opt</span></sub>+&#8710;f with &#8710;f
+=10<sup>k</sup>, where
+        k is given by the first value in the legend, for
+        algorithmA&nbsp;(<span style="color:#000000">&#176;</span>) and algorithmB&nbsp;(<span style="color:#000000">&#9830;</span>)        . Right sub-columns:
+        ECDF of FEval ratios of algorithmA&nbsp;divided by algorithmB&nbsp;for target
+        function values 10<sup>k</sup> with k given in the legend; all
+        trial pairs for each function. Pairs where both trials failed are disregarded,
+        pairs where one trial failed are visible in the limits being  &gt; 0 or  &lt; 1. The
+        legend also indicates, after the colon, the number of functions that were
+        solved in at least one trial (algorithmA&nbsp;first).
+
+<div class="p"><!----></div>
+##bbobppfigdimlegendlargescalefixed##
+
+        Scaling of runtime with dimension to reach certain target values &#8710;f.
+        Lines: average runtime (<span class="roman">aRT</span>);
+        Cross (+): median runtime of successful runs to reach the most difficult
+        target that was reached at least once (but not always);
+        Cross (<span style="color:#FF0000">&times;</span>): maximum number of
+        f-evaluations in any trial. Notched boxes: interquartile range with median of simulated runs; 
+        All values are divided by dimension and  
+        plotted as log<sub>10</sub> values versus dimension.                 Shown is the <span class="roman">aRT</span>&nbsp;for fixed values of &#8710;f
+= 10<sup>k</sup> with k given
+        in the legend.
+        Numbers above <span class="roman">aRT</span>-symbols (if appearing) indicate the number of trials
+        reaching the respective target.  Horizontal lines mean linear scaling, slanted
+        grid lines depict quadratic scaling.
+
+<div class="p"><!----></div>
+##bbobpptablecaptionlargescalefixed##
+
+        Average runtime (<span class="roman">aRT</span>) to reach given targets, measured
+        in number of function evaluations. For each function, the <span class="roman">aRT</span>&nbsp;
+        and, in braces as dispersion measure, the half difference between 10 and 
+        90%-tile of (bootstrapped) runtimes is shown for the different
+        target &#8710;f-values as shown in the top row. 
+        #succ is the number of trials that reached the last target 
+        f<sub><span class="roman">opt</span></sub>+ 10<sup>&#8722;8</sup>.
+        The median number of conducted function evaluations is additionally given in 
+        <i>italics</i>, if the target in the last column was never reached. 
+
+<div class="p"><!----></div>
+##bbobpptablesmanylegendlargescalefixed##
+
+        Average runtime (<span class="roman">aRT</span>) to reach given targets, measured
+        in number of function evaluations, in different dimensions. For each function, the <span class="roman">aRT</span>&nbsp;
+        and, in braces as dispersion measure, the half difference between 10 and 
+        90%-tile of (bootstrapped) runtimes is shown for the different
+        target &#8710;f-values as shown in the top row. 
+        #succ is the number of trials that reached the last target
+        f<sub><span class="roman">opt</span></sub>+ 10<sup>&#8722;8</sup>.
+                The median number of conducted function evaluations is additionally given in 
+        <i>italics</i>, if the target in the last column was never reached.
+        Entries, succeeded by a star, are statistically significantly better (according to
+        the rank-sum test) when compared to all other algorithms of the table, with
+        p = 0.05 or p = 10<sup>&#8722;k</sup> when the number k following the star is larger
+        than 1, with Bonferroni correction by the number of functions (24). A &#8595; indicates the same tested against . Best results are printed in bold.
+        ??COCOVERSION??
+
+<div class="p"><!----></div>
+##bbobppscatterlegendlargescalefixed##
+
+Average running time (<span class="roman">aRT</span>&nbsp;in log<sub>10</sub> of number of function evaluations)
+        of algorithmA&nbsp;(y-axis) versus algorithmB&nbsp;(x-axis) for !!NBTARGETS&#8722;SCATTER!! target values
+        !!DF!!  &#8712; [!!NBLOW!!, !!NBUP!!] in each dimension on functions f<sub>1</sub> - f<sub>24</sub>. Markers on the upper or right edge indicate that the respective target
+        value was never reached. Markers represent dimension:
+        20:<span style="color:#00FFFF">+</span>,
+        40:\triangledown,
+        80:<span style="color:#0000FF">&#8727;</span>,
+        160:&#176;,
+        320:<span style="color:#FF0000"><span style="font-size:x-small"><sup>[<u>&#175;</u>]</sup></span></span>,
+        640:<span style="color:#FF00FF">\Diamond</span>. 
+
+<div class="p"><!----></div>
+##bbobloglosstablecaptionlargescalefixed##
+
+        <span class="roman">aRT</span>&nbsp;loss ratio versus the budget in number of f-evaluations
+        divided by dimension.
+        For each given budget <span class="roman">FEvals</span>, the target value f<sub><span class="roman">t</span></sub>&nbsp;is computed
+        as the best target f-value reached within the
+        budget by the given algorithm.
+        Shown is then the <span class="roman">aRT</span>&nbsp;to reach f<sub><span class="roman">t</span></sub>&nbsp;for the given algorithm
+        or the budget, if 
+        reached a better target within the budget,
+        divided by the <span class="roman">aRT</span>&nbsp;of  to reach f<sub><span class="roman">t</span></sub>.
+        Line: geometric mean. Box-Whisker error bar: 25-75%-ile with median
+        (box), 10-90%-ile (caps), and minimum and maximum <span class="roman">aRT</span>&nbsp;loss ratio
+        (points). The vertical line gives the maximal number of function evaluations
+        in a single trial in this function subset. See also
+        the following figure for results on each function subgroup.??COCOVERSION??
+
+<div class="p"><!----></div>
+##bbobloglossfigurecaptionlargescalefixed##
+
+        <span class="roman">aRT</span>&nbsp;loss ratios (see the previous figure for details).
+
+<div class="p"><!----></div>
+        Each cross (<span style="color:#0000FF">+</span>) represents a single function, the line
+        is the geometric mean.
+
+<div class="p"><!----></div>
 ###
 
 <br /><br /><hr /><small>File translated from
 T<sub><span class="small">E</span></sub>X
 by <a href="http://hutchinson.belmont.ma.us/tth/">
 T<sub><span class="small">T</span></sub>H</a>,
-version 4.08.<br />On 24 Nov 2017, 10:23.</small>
+version 4.08.<br />On 12 Apr 2018, 18:30.</small>
 </html>
