update html captions to pass very-postprocessing test

--- a/code-postprocessing/cocopp/latex_commands_for_html.html
+++ b/code-postprocessing/cocopp/latex_commands_for_html.html
@@ -97,8 +97,7 @@ Average running time (<span class="roman">aRT</span>&nbsp;in number of f-evaluat
 ##bbobpptablecaptionrlbased##
 
         Average running time (<span class="roman">aRT</span>&nbsp;in number of function 
-        evaluations) divided by the <span class="roman">aRT</span>&nbsp;of the best algorithm from BBOB 2009 in different dimensions. The <span class="roman">aRT</span>&nbsp;
-        and in braces, as dispersion measure, the half difference between 90 and 
+        evaluations) divided by the <span class="roman">aRT</span>&nbsp;of the best algorithm from BBOB 2009 in different dimensions. This <span class="roman">aRT</span>&nbsp;        ratio and, in braces as dispersion measure, the half difference between 90 and
         10%-tile of bootstrapped run lengths appear in the second row of each cell,  
         the best <span class="roman">aRT</span>&nbsp;                in the first. The different target &#8710;f-values are shown in the top row. 
         #succ is the number of trials that reached the (final) target f<sub><span class="roman">opt</span></sub>
@@ -117,7 +116,7 @@ Average running time (<span class="roman">aRT</span>&nbsp;in number of f-evaluat
         Average runtime (<span class="roman">aRT</span>&nbsp;in number of function 
         evaluations) divided by the respective best <span class="roman">aRT</span>&nbsp;measured during BBOB-2009 in
         different dimensions.
-        The <span class="roman">aRT</span>&nbsp;and in braces, as dispersion measure, the half difference between 
+        This <span class="roman">aRT</span>&nbsp;ratio and, in braces as dispersion measure, the half difference between
         10 and 90%-tile of bootstrapped run lengths appear for each algorithm and 
                 run-length based target, the corresponding reference <span class="roman">aRT</span>&nbsp;        (preceded by the target &#8710;f-value in <i>italics</i>) in the first row. 
         #succ is the number of trials that reached the target value of the last column.
@@ -245,8 +244,7 @@ Average running time (<span class="roman">aRT</span>&nbsp;in number of f-evaluat
 ##bbobpptablecaptionfixed##
 
         Average running time (<span class="roman">aRT</span>&nbsp;in number of function 
-        evaluations) divided by the <span class="roman">aRT</span>&nbsp;of the best algorithm from BBOB 2009 in different dimensions. The <span class="roman">aRT</span>&nbsp;
-        and in braces, as dispersion measure, the half difference between 90 and 
+        evaluations) divided by the <span class="roman">aRT</span>&nbsp;of the best algorithm from BBOB 2009 in different dimensions. This <span class="roman">aRT</span>&nbsp;        ratio and, in braces as dispersion measure, the half difference between 90 and
         10%-tile of bootstrapped run lengths appear in the second row of each cell,  
         the best <span class="roman">aRT</span>&nbsp;                (preceded by the target &#8710;f-value in <i>italics</i>) in the first. 
         #succ is the number of trials that reached the target value of the last column.
@@ -264,7 +262,7 @@ Average running time (<span class="roman">aRT</span>&nbsp;in number of f-evaluat
         Average runtime (<span class="roman">aRT</span>&nbsp;in number of function 
         evaluations) divided by the respective best <span class="roman">aRT</span>&nbsp;measured during BBOB-2009 in
         different dimensions.
-        The <span class="roman">aRT</span>&nbsp;and in braces, as dispersion measure, the half difference between 
+        This <span class="roman">aRT</span>&nbsp;ratio and, in braces as dispersion measure, the half difference between
         10 and 90%-tile of bootstrapped run lengths appear for each algorithm and 
                 target, the corresponding reference <span class="roman">aRT</span>&nbsp;        in the first row. The different target &#8710;f-values are shown in the top row.
         #succ is the number of trials that reached the (final) target
@@ -388,8 +386,7 @@ Average running time (<span class="roman">aRT</span>&nbsp;in number of f-evaluat
 ##bbobpptablecaptionbiobjfixed##
 
         Average running time (<span class="roman">aRT</span>&nbsp;in number of function 
-        evaluations) divided by the <span class="roman">aRT</span>&nbsp;of the best algorithm from BBOB 2016 in different dimensions. The <span class="roman">aRT</span>&nbsp;
-        and in braces, as dispersion measure, the half difference between 90 and 
+        evaluations) divided by the <span class="roman">aRT</span>&nbsp;of the best algorithm from BBOB 2016 in different dimensions. This <span class="roman">aRT</span>&nbsp;        ratio and, in braces as dispersion measure, the half difference between 90 and
         10%-tile of bootstrapped run lengths appear in the second row of each cell,  
         the best <span class="roman">aRT</span>&nbsp;                (preceded by the target &#8710;I-value in <i>italics</i>) in the first. 
         #succ is the number of trials that reached the target value of the last column.
@@ -407,7 +404,7 @@ Average running time (<span class="roman">aRT</span>&nbsp;in number of f-evaluat
         Average runtime (<span class="roman">aRT</span>&nbsp;in number of function 
         evaluations) divided by the respective best <span class="roman">aRT</span>&nbsp;measured during BBOB-2016 in
         different dimensions.
-        The <span class="roman">aRT</span>&nbsp;and in braces, as dispersion measure, the half difference between 
+        This <span class="roman">aRT</span>&nbsp;ratio and, in braces as dispersion measure, the half difference between
         10 and 90%-tile of bootstrapped run lengths appear for each algorithm and 
                 target, the corresponding reference <span class="roman">aRT</span>&nbsp;        in the first row. The different target &#8710;I-values are shown in the top row.
         #succ is the number of trials that reached the (final) target
@@ -533,8 +530,7 @@ Average running time (<span class="roman">aRT</span>&nbsp;in number of f-evaluat
 ##bbobpptablecaptionbiobjrlbased##
 
         Average running time (<span class="roman">aRT</span>&nbsp;in number of function 
-        evaluations) divided by the <span class="roman">aRT</span>&nbsp;of the best algorithm from BBOB 2016 in different dimensions. The <span class="roman">aRT</span>&nbsp;
-        and in braces, as dispersion measure, the half difference between 90 and 
+        evaluations) divided by the <span class="roman">aRT</span>&nbsp;of the best algorithm from BBOB 2016 in different dimensions. This <span class="roman">aRT</span>&nbsp;        ratio and, in braces as dispersion measure, the half difference between 90 and
         10%-tile of bootstrapped run lengths appear in the second row of each cell,  
         the best <span class="roman">aRT</span>&nbsp;                in the first. The different target &#8710;I-values are shown in the top row. 
         #succ is the number of trials that reached the (final) target I<sup><span class="roman">ref</span></sup>
@@ -553,7 +549,7 @@ Average running time (<span class="roman">aRT</span>&nbsp;in number of f-evaluat
         Average runtime (<span class="roman">aRT</span>&nbsp;in number of function 
         evaluations) divided by the respective best <span class="roman">aRT</span>&nbsp;measured during BBOB-2016 in
         different dimensions.
-        The <span class="roman">aRT</span>&nbsp;and in braces, as dispersion measure, the half difference between 
+        This <span class="roman">aRT</span>&nbsp;ratio and, in braces as dispersion measure, the half difference between
         10 and 90%-tile of bootstrapped run lengths appear for each algorithm and 
                 run-length based target, the corresponding reference <span class="roman">aRT</span>&nbsp;        (preceded by the target &#8710;I-value in <i>italics</i>) in the first row. 
         #succ is the number of trials that reached the target value of the last column.
@@ -892,5 +888,5 @@ Average running time (<span class="roman">aRT</span>&nbsp;in log<sub>10</sub> of
 T<sub><span class="small">E</span></sub>X
 by <a href="http://hutchinson.belmont.ma.us/tth/">
 T<sub><span class="small">T</span></sub>H</a>,
-version 4.08.<br />On 24 Nov 2017, 10:23.</small>
+version 4.08.<br />On 25 May 2018, 17:54.</small>
 </html>
